syntax = "proto3";

option csharp_namespace = "CCM.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service HardDrive {
  
  rpc CreateHardDrive (CreateHardDriveRequest) returns (HardDriveDTO);
  rpc GetHardDrive (GetRequest) returns (NullableHardDriveDTO);
  rpc DeleteHardDrive(HardDriveDTO) returns (google.protobuf.Empty);
}

message HardDriveDTO{
	int32 id = 1;
	string model = 2;
	string brand = 3;
	double storage = 4;
	ConnectionHardDrivesTypes connectionHardDrivesType = 5;
}

message NullableHardDriveDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		HardDriveDTO harddrive = 2;
	}
}

message CreateHardDriveRequest{
	string model = 1;
	string brand = 2;
	double storage = 3;
	ConnectionHardDrivesTypes connectionHardDrivesType = 4;
}

enum ConnectionHardDrivesTypes{
	IDE = 0;
	SATA = 1;
	SATA2 = 2;
	SATA3 = 3;
}
